variables.Variables.scala.error
Erreur de compilation :
Variables:9: error: '<-' expected but ';' found.
for (1; nbPas; 1) { 
      ^Variables:9: error: '<-' expected but ';' found.
for (1; nbPas; 1) { 
             ^Variables:9: error: '<-' expected but ')' found.
for (1; nbPas; 1) { 
                ^Variables:14: error: illegal start of simple expression
	}
        ^