variables.Variables.scala.code
var nbPas:Int = 0

while (!estSurBiscuit()) {
  avance();
  nbPas = nbPas + 1;
}

prendBiscuit()
for (1; nbPas; 1) { 
  recule();
}
poseBiscuit();